# pargotest

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  FILESTRUCTURE.md  Pargo.toml  README.md  conanfile.py
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
cmake/: CompilerFlags.cmake  Deps.cmake  Functions.cmake  Targets.cmake  Vars.cmake
docs/: CMakeLists.txt  Doxygen.in  conf.py  index.rst  requirements-rtd.txt  requirements.txt
examples/: CMakeLists.txt
src/: main.cpp
tests/: CMakeLists.txt
